--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
 
+    implementation 'com.github.JalalJanKhan3336:FirebaseFirestoreLibrary:1.0'
 
-    implementation project(path: ':firestoredatabase')
+    //implementation project(path: ':firestoredatabase')
 }
